CHANGES-1.1.txt
---------------

CHANGES IN CUPS V1.1.19

	- The ppdEmit() functions now support the
	  RequiresPageRegion attribute when sending InputSlot
	  and ManualFeed commands.
	- The PPD loading code now supports standard options
	  outside of OpenUI/CloseUI as required by the PPD spec.
	- The cupstestppd program has been upgraded to provide a
	  concise PASS/FAIL report, additional detailed
	  conformance testing, and support for gzip'd PPD files.
	- The PPD loading code is now much more strict when
	  loading a PPD file, and tracks more format errors.
	- The scheduler ignored child signals when gathering the
	  list of available devices, when it should have been
	  using the default signal handler.
	- The cupsEncodeOptions() function could encode an
	  option with a NULL last string.
	- The socket backend could report the wrong number of
	  backchannel bytes if an error occurred on the link.
	- The cups-polld program now only sleeps after getting
	  all printers and classes.  This allows for longer
	  intervals without excessive delays before classes show
	  up...
	- Added a new httpWait() function to support waiting for
	  data for a specific number of milliseconds.
	- httpGets() now times out after 1 second on
	  non-blocking HTTP connections.
	- The scheduler no longer accepts rangeOfInteger values
	  that are out of order (e.g. 5-1)
	- The sides attribute was incorrectly sent as a name
	  value; it is a keyword value.
	- The IPP backend now detects if the destination queue
	  has gone away and reports an error.
	- The scheduler and HTTP API now allocate their select()
	  sets to support larger numbers of clients on systems
	  that support it.
	- The scheduler now sets the CFProcessPath environment
	  variable under MacOS X.
	- The cupsLangDefault() function now uses the
	  CoreFoundation localization API under MacOS X.
	- The httpSeparate() function didn't handle file URIs of
	  the form "file:///path" properly.